<resources>
    <string name="manav">Co-Founder, A Million for A Billion (1M1B)\nSenior Fellow, Lester Center for Entrepreneurship, UC Berkeley\nFormer Global Manager, Intel Corporation</string>
    <string name="swati">Co-Founder, A Million for a Billion (1M1B)\nA Scientist working in New Delhi, India. She has over 14 years of experience in the field of clinical research. She received her doctoral degree from the prestigious All India Institute of Medical Sciences, New Delhi.</string>
    <string name="mary">She has worked at the United Nations Development Programme (UNDP) specializing in economic and social development in Africa for about 3 decades. Ms. Symmonds served in various capacities, including Country Director in Uganda and as Deputy Resident Representative (Programme) in Nigeria and Country Advisor in NY.</string>
    <string name="donna">As a Dayako, she is an entelechist who activates people and enterprises to fulfill their passion, purpose and promise for the world with velocity. Donna was a photo editor for various Time Inc. magazines and other national and international publications. She worked at the Sundance Institute Filmmaker and Theatre Labs. She co-founded what is now AAFilmLab and initiated the 72 Hour Film Shootout Competition.</string>
    <string name="ravi">Ravi has served as the Global Advisor on Youth + Partnership with United Nations Millennium Campaign and UN-Habitat, based in New York. He is the lead author of the groundbreaking report “Youth 21: Building the Architecture of Youth Engagement in the UN System,” by UN-Habitat, which contributed to the creation of United Nations Secretary General’s Envoy on Youth. Ravi represented UN-Habitat as the co-chair of the UN Interagency Network on Youth Development.</string>
    <string name="henrik">Henrik focuses on projects in entrepreneurship education, impact investing, and tech startups in the digital signage space. He founded two companies in IT recycling and Design Thinking. He has worked with the Global Research team at Vestas Wind Systems specializing in strategy development and Innovation Management. He has also founded Startup Experience, Inc. - A company that delivers interactive workshops aimed at solving social problems through entrepreneurship.</string>
    <string name="nagesh">Partner, University Central LLC President, FICE America, Inc.\nExecutive Director and Trustee, FICE\nNagesh Singh has successfully developed businesses in areas as diverse as IT, telecommunications, and interactive distance learning. He has worked in a variety of capacities with transnational companies like ICIM, HCL, Hughes and Gilat Satellite Networks. He was the founder of Hughes\' HughesNet Global Education business that makes programs from top Indian and American schools available to students across India over a satellite based interactive distance learning network. Singh currently serves as the CEO of AHEd Global Healthcare, Inc, a leading provider of continuing education programs to helathcare workers. He is also associated with University Central, LLC a Cambridge, MA, USA based company, as a Partner.</string>
    <string name="jamadagni">Part Time Member, Telecommunications Regulatory Authority Of India (TRAI) Professor, Indian Institute of Science, Bangalore\nH.S. Jamadagni is a Professor in the Department of Electronic Systems Engineering (DESE, formerly Centre for Electronics Design and Technology, CEDT), Indian Institute of Science (IISc), Bangalore. He received Masters and PhD degree in Electronics and Communication Engineering from IISc. He was the chairman of DESE during 1996 – 2009. He teaches in the areas of embedded systems, communication networks, wireless sensor networks, and VLSI design. His current research work is in application of DSP in communication systems, application of IT in health care, conservation and development, as well as computing architectures for high-speed wireless networks. He has active and vibrant collaboration with several Industries including Intel, TI, Boeing, Xilinx, and Freescale and educational institutions such as EPFL, Switzerland. He has many publications in areas of his work.</string>
    <string name="carrie">Award winning author, advocate, and innovator, Carrie Silver-Stock, MSW, LCSW is the Executive Director of EBW2020 LCC (Empowering a Billion Women by 2020). As a champion for women, girls, and entrepreneurs, she has served in many roles including adjunct faculty, radio show host, speaker and contributor.</string>
    <string name="john">Senior Fellow, The Lester Center for Entrepreneurship, Hoes School of Business, University of California, Berkeley Visiting Professor, The Keller Center for Innovation in Engineering Education, Princeton University \nJohn Danner is a Senior Fellow at the Lester Center, Haas School of Business, University of California, Berkeley. An experienced management consultant and entrepreneur, he has advised senior executives of multi-billion-dollar international enterprises on strategy, value management and business growth, as well as management teams of emerging ventures on competitive positioning, marketing and product strategy. His clients include leading companies in healthcare, energy, entertainment, food products, telecommunications and information and startups in energy management, e-commerce and supply chain integration. He has designed and successfully launched several new business initiatives for client organizations over the past twenty-five years. He is a senior moderator for The Aspen Institute, and conducts seminars on leadership, innovation and entrepreneurship around the world.</string>
    <string name="home">Change the world internships (Change ships) will give opportunities to people to have an immersive entrepreneurial experience on real challenge faced by our communities and activate themselves to change the world.\n\nThe change the world internships will pair individuals from different economic settings. By anchoring short assignments, 1M1B will sensitize and provide opportunities to students for executing their ideas for development.</string>
    <string name="about"><b>\'CHANGE THE WORLD\'</b> Encourages the young minds to think beyond the horizons and execute their dream project. Following are the few steps to convert your dream project into reality.</string>
    <string name="app_name">CTW</string>
    <string name="change">Change the World Internships</string>
    <string name="register">Register</string>
    <string name="rule">1. Competition is open to residents of India only. NRIs are not eligible to participate\n\n2. Individuals in the age group 16-27 years are eligible to apply\n\n3. No prior business nor documentary making skills are required\n\n4. One participant cannot be part of more than one competition\n\n5. Cross-college teams are allowed\n\n6. No change in the team structure is permitted after registration\n\n7. Multiple entries will be disqualified\n\n8. Applicants risk disqualification if they attempt to approach a judge, or have someone do that on their behalf, in connection with the competition\n\n9. All applications must be original work of the team\n\n10. The decisions of the judges are final, including interpretation of the rules\n\n11. CDF and/or 1M1B are not responsible for providing visa and passports. The participants have to arrange them on their own. If they fail to arrange, CDF and/or 1M1B will not do anything to send them. We as organizers will only be responsible to provide a written document acknowledging you as representatives from India as part of the programme, for the cause of visa application.\n\n12. The organizers are not responsible for any injury/death/theft to the participants during the time he /she is engaged in the competition.\n\n13. The registration fee is not refundable to the participants\n\n14. All information and ideas generated for the purpose of this competition are the property of Connecting Dreams Foundation.\n\n15. The organization will not pass on your details to any third party without your prior consent</string>
    <string name="rule1">1. The personal information given by the participants will be stored by the organizers (1M1B and CDF) and will not be passed to any third party without participant’s prior consent\n\n2. Entrants have the right to access, withdraw, and correct their personal information, and under certain circumstances to oppose the collection or processing of the information and request the status of Promoter’s use or sharing of entrants’ personal information. Entrants may request such action by contacting CDF</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dream">The program will be launched in 4 countries with 1M1B’s partners and affiliates. In India Connecting Dreams Foundation (CDF) will be running the program.\n\nIn each country applications will be invited from 2 member teams to submit ideas on how during the internship period, they would like to build employability skills, create jobs or help set up micro enterprises for youth and women belonging to underserved or underpreviliged communities.\n\n<b>In India the applications will close on 31st March, 2015</b></string>
    <string name="design">Based on applications 50 teams comprising of 100 selected students will be invited to participate in an intense 3 days ideation and simulation workshop which will help the participant develop skills, increase relevance and scale of their ideas. The workshop will be conducted on 6,7,8 April by Manav Subodh, Senior Fellow, UC Berkeley, Haas school of Business and Cofounder, A Million for A Billion (1M1B).</string>
    <string name="develop">20 teams move on to this stage of the competition, wherein they be will be invited to refine their idea, develop an action plan and work on a sustainability plan. A coach/mentor would assist each team in the development of the plan. The teams will be required to devote 10 hours over a period of a month to this stage for meeting with experts. Once the coach approves of their plans they will move to stage 4 automatically.</string>
    <string name="deliver">20 teams in stage 4 will be required to do intensive field work and show the successful implementation of ideas. They will also be enrolled in online guide and educational programmes taken up by noted people in the field for further assistance. The participants are expected to do this online course, by scheduling 2 hours a week at a time of their convenience for 8 weeks.</string>
    <string name="demonstrate">Between 10-15, August 2015, the 20 teams will present their project to the 1M1B and CDF teams. Selected 15 teams will then present their projects in a public event to a panel of experts. Top 2 teams will be selected to move on to the last stage and will be invited for an all-expense paid trip to New York, USA</string>
    <string name="task5">A panel of experts will analyze their work represented\nin the form of documentary and presentations. 2 teams\nwill be selected to represent their projects at UN on\nbehalf of India. The selected teams will be presenting\nat UN, General Assembly. (26th September)</string>
    <string name="task4">All the teams will be provided with resources (monetary\nfunds, etc.) for the implementation of their project.\nThe teams will be visiting the sites and implementing\ntheir projects. The time taken by the team to\nimplement their project is at their discretion. The\nteams can also raise further funds to sponsor their\nideas if needed.</string>
    <string name="task3">The teams will be given 5 weeks time to conduct a\nbackground and feasibility check for their idea. </string>
</resources>