<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <TextView
            android:text="Process Details"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/about"
            android:textSize="15sp"
            android:textColor="#0046ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:text="Stage 1 - DREAM"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/dream"
            android:textSize="15sp"
            android:textColor="#0060ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="Stage 2 - DESIGN"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/design"
            android:textSize="15sp"
            android:textColor="#00400f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
        
        <TextView
            android:text="Stage 3 - DEVELOP"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/develop"
            android:textSize="15sp"
            android:textColor="#0040ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
        
        <TextView
            android:text="Stage 4 - DELIVER"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/deliver"
            android:textSize="15sp"
            android:textColor="#0000ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
        
        <TextView
            android:text="Stage 5 - DEMONSTRATE"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:text="@string/demonstrate"
            android:textSize="15sp"
            android:textColor="#0006ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>
       </LinearLayout>
</ScrollView>